# governer

./: README.md  databricks.yml  deploy-dev.sh  deploy-prod.sh  pyproject.toml
resources/apps/: govern-app.app.yml
resources/dashboards/: table_comments.dashboard.yml
resources/jobs/: clean_data_generation.job.yml  govern_table_descriptions.job.yml  govern_table_pii.job.yml
resources/pipelines/: load_bronze.pipeline.yml
src/ai/: ai_tables_comment.ipynb  ai_tables_pii.ipynb
src/dashboards/: table_comments_dashboard.lvdash.json
src/data_generation/: clean_data_generate.ipynb
src/govern-app/: app.py  requirements.txt
src/governer/: main.py  utils.py
src/governer/schemas/bronze/: customers.py  orders.py  payments.py
src/governer/schemas/governance/: ai_govern_table.py  table_comment_actions.py
src/governer/schemas/raw/: customers.py  orders.py  payments.py
src/pipelines/load_bronze/: customers.py  orders.py  payments.py
src/prompts/: columns.md
tests/: sample_taxis_test.py
