[project]
name = "governer"
version = "0.0.1"
authors = [{ name = "uharabtsou@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
    "databricks-sdk>=0.99.0",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
    "dbldatagen",
    "jmespath",
    "pyparsing",
    "databricks-sdk[notebook]",
    "streamlit"
]

[project.scripts]
main = "governer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
builtins = ["dbutils", "spark"]
